Hide issue button on medium screen widths
It's already in the footer, and it overlaps the burger icon at this width.

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -72,12 +72,6 @@
 
 @media only screen and (max-width: $medium-screen-cutoff) {
   .headerElement.githubIssueLink {
-    text-align: right;
-  }
-}
-
-@media only screen and (max-width: $small-screen-cutoff) {
-  .headerElement.githubIssueLink {
     display: none;
   }
 }
